# yolo

./: .gitignore  ncollect.py  ndetect.py  ngrabtest.py  nimgproc.py  nocrfiles.py  pyproject.toml  railtests.py  requirements.txt
capture/: test_capture.py
capture/helpers/: video_threading.py
infere/: extract_objs.py  simplify_onnx.py
instl_cuda_cv2_scripts/: 03install_cuda_part3.sh  04install_opencv_pyenv_part1.sh  05install_opencv_pyenv_part2.sh  06install_opencv_pyenv_part3.sh  install_cuda_part1.sh  install_cuda_part2.sh  install_opencv_pyenv_part1.sh  install_opencv_pyenv_part2.sh  install_opencv_pyenv_part3.sh  run.sh
models/: data.yaml
ocr/: deblur_test.py  ocr_test.py
preps/: resize_video.py  splitvideo.py
rc/: run.py  run_20.py  run_21.py  run_22.py  run_23.py  run_L20.py  run_L21.py  run_L22.py  run_L23.py  run_Lrecord.py  run_M20.py  run_M21.py  run_M22.py  run_M23.py  run_Mrecord.py  run_second.py  true_list.txt
rc/helpers/: infer.py  ocr.py  video_threading.py
yolov8/: data.yaml
